# av-init

./: .gitignore  CMakeLists.txt
Apps/: CMakeLists.txt
Apps/ConsoleAppTemplate/: CMakeLists.txt
Apps/ConsoleAppTemplate/Source/: Main.cpp
